<resources>
    <string name="app_name">ProjectForSamsung</string>
    <string name="wlcm">Greetengs, stranger!</string>
    <string name="play">Let\'s play!</string>
    <string name="random">Add a random object</string>
    <string name="clr">clear all</string>
    <string name="icom">icon</string>
    <string name="gugl">Add Google</string>
    <string name="oreo">Add Oreo</string>
    <string name="appl">Add Apple</string>
</resources>
